[metadata]
name = mqbrokerpy
version = 0.0.1
url = https://github.com/tonibofarull/mqbrokerpy
author = tonibofarull
author_email = tonibofarull@gmail.com
description = MQTT Broker

[options]
python_requires = >=3.10
package_dir=
    =src
packages=find:
install_requires =

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    mqbrokerpy = mqbrokerpy.__main__:main
